src/objects/QPMS__General_Task__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Sign_Off_date__c</fullName>
        <label>Sign Off date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed-off By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Pending ActionPlan</fullName>
                </value>
                <value>
                    <fullName>Disposition Pending Completion</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Pre Change Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Action Completion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Department</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>General Tasks (Sub Department)</relationshipLabel>
        <relationshipName>General_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Task_Closed_Date__c</fullName>
        <description>This field will be populated with Task closed date</description>
        <label>Task Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Task_ID__c</fullName>
        <displayFormat>NCT-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>QPMS__Task_Recall_Comments__c</fullName>
        <description>stores the value of document change task recall comments</description>
        <inlineHelpText>stores the value of document change task recall comments</inlineHelpText>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Task_Reopen_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Reopen By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Task_Reopen_Date__c</fullName>
        <label>Task Reopen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Temp_Approval_Required__c</fullName>
        <label>Temp Approval Required</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Temp_Change_Owner_value__c</fullName>
        <label>Temp Change Owner value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is to delete record upon user selection of NC Task.</description>
        <label>delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isSubmitted__c</fullName>
        <label>isSubmitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>General Task</label>
    <listViews>
        <fullName>QPMS__All_Genral_Tasks</fullName>
        <columns>NAME</columns>
        <columns>QPMS__CAPA__c</columns>
        <columns>QPMS__Non_Conformance__c</columns>
        <columns>QPMS__Record_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Genral Tasks</label>
    </listViews>
    <nameField>
        <displayFormat>GT-{0000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__AdhocTask</fullName>
        <active>true</active>
        <label>AdhocTask</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Closure</fullName>
        <active>true</active>
        <label>Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__CollaborationReview</fullName>
        <active>true</active>
        <description>CollaborationReview</description>
        <label>CollaborationReview</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Containment</fullName>
        <active>true</active>
        <label>Containment</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Disposition</fullName>
        <active>true</active>
        <label>Disposition</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__DocumentChange</fullName>
        <active>true</active>
        <label>DocumentChange</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__EffectivenessReview</fullName>
        <active>true</active>
        <label>EffectivenessReview</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Functional_Task</fullName>
        <active>true</active>
        <label>Functional Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Implementation</fullName>
        <active>true</active>
        <label>Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Product_Change</fullName>
        <active>true</active>
        <label>Product Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Response_Task</fullName>
        <active>true</active>
        <description>Response Task</description>
        <label>Response Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Allowed_days_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(QPMS__Allowed_Days__c)</errorConditionFormula>
        <errorDisplayField>QPMS__Allowed_Days__c</errorDisplayField>
        <errorMessage>Allowed days is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__NC_Approver_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( QPMS__Approver__c ),  ISPICKVAL(QPMS__Approval_Required__c , &quot;Yes&quot;))</errorConditionFormula>
        <errorDisplayField>QPMS__Approver__c</errorDisplayField>
        <errorMessage>NC Approver is required.</errorMessage>
    </validationRules>
</CustomObject>